fix button font and text alignment

--- a/frontend/src/components/Button/Button.css
+++ b/frontend/src/components/Button/Button.css
@@ -14,8 +14,7 @@
   color: rgba(233, 193, 93);
   transition: all 0.4s ease;
   background-color: transparent;
-  font-family: cursive;
-  padding-bottom: 2rem;
+  font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 
 .button:hover {
